--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- <style>
+    <style>
       html,
       body,
       #root,
@@ -44,7 +44,10 @@
         height: 100%;
         margin: 0;
       }
-    </style> -->
+      /* body {
+  font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width])));
+} */
+    </style>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
