--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,13 @@
     />
 
     <!-- <link
+    href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css"
+    rel="stylesheet"
+  /> -->
+
+    <!-- <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' /> -->
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
+    <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
