feat(infocard): add InfoCard to Home

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- <link
+    <link
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,300;1,400&display=swap"
       rel="stylesheet"
     />
@@ -18,7 +18,7 @@
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css"
       rel="stylesheet"
-    /> -->
+    />
 
     <link
       rel="stylesheet"
