feat(add infocard): infoCard shows the inverted geo data of coordinates, when user clicks on the map

--- a/public/index.html
+++ b/public/index.html
@@ -20,23 +20,13 @@
       rel="stylesheet"
     />
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#e76f1f" />
     <meta name="description" content="Find your place in the world" />
     <style>
       html,
       body,
-      #root,
-      #root > div {
+      #root {
         height: 100%;
         margin: 0;
       }
